Eliminada la compatibliidad con la descarga de modelos de hugging face.
